# awsome-journal

./: .dockerignore  .env-example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  alembic.ini  database.py  dependencies.py  docker-compose.yml  env-example  main.py  models.py  pyproject.toml  requirements.txt  services.py
app/: dependencies.py  main.py  services.py  settings.py
app/alembic/: env.py
app/alembic/versions/: 41ed24e70a50_restructure_users_table.py  6ae548c7edec_add_repeat_table.py  80d213134faa_init_alembic.py  81b695beef3f_rename_todos_to_tasks.py  c3515e1327fa_add_phone_number_column.py  cf98bac75344_make_todo_list_id_required_with_cascade_.py  f3a2317e16dc_init_alembic.py
app/core/: database.py  security.py  settings.py
app/models/: __init__.py  list.py  repeat.py  task.py  todo.py  user.py
app/repositories/: list_repository.py  user_repository.py
app/routers/: admin.py  auth.py  lists.py  tasks.py  todos.py  users.py  views.py
app/schemas/: list.py  repeat.py  task.py  todo.py  user.py
app/services/: auth_service.py  user_service.py
app/templates/: home.html  layout.html  login.html  register.html
app/tests/: test_main.py
collection/: opencollection.yml
collection/01. Auth/: Get Token.yml  Register.yml  folder.yml
collection/02. Todos/: Create Todo.yml  Delete A Todo.yml  Read A Todo.yml  Update Todo.yml  folder.yml
collection/environments/: Todo Environment.yml
docs/: CONTRIBUTING.md  ERD.md  LICENSE  README.md
docs/collection/: opencollection.yml
docs/collection/01. Auth/: Get Token.yml  Register.yml
docs/collection/02. Tasks/: Create Task.yml
docs/collection/02. Todos/: Delete A Todo.yml  Read All Todos.yml  Update Todo.yml
docs/collection/03. Admin/: Delete Task.yml  Read All Todos.yml  folder.yml
docs/collection/05. Users/: Change Password.yml  Me.yml  Update Partial.yml  folder.yml
models/: todo.py  user.py
routers/: auth.py  todos.py
